--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@gnosis.pm/safe-apps-web3-react": "^0.6.1",
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.0",
+    "@inlightmedia/react-countdown-timer": "^1.1.2",
     "@tailwindcss/forms": "^0.3.3",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
