--- a/.env.production
+++ b/.env.production
@@ -8,4 +8,4 @@ NEXT_PUBLIC_DESIGNATED_SALE_CONTRACT_ADDRESS="0x535F3e39d07AC222c0Af1b742cA749e0
 NEXT_PUBLIC_NFT_CONTRACT_ADDRESS="0xdECe7b73E056368F568007c75dbcA26ece919f53"
 NEXT_PUBLIC_WNEW_ADDRESS="0x4438E9C8e0C9B209Fa8B76c83F73A7D317dE3c12"
 NEXT_PUBLIC_START_BLOCK=4716586
-
+NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
