fix bug for fee

--- a/.env.production
+++ b/.env.production
@@ -7,5 +7,7 @@ NEXT_PUBLIC_DUTCH_AUCTION_CONTRACT_ADDRESS="0xcE8eCeBA1D21522Ffa3028270b737e10F2
 NEXT_PUBLIC_DESIGNATED_SALE_CONTRACT_ADDRESS="0x535F3e39d07AC222c0Af1b742cA749e00B6C6e75"
 NEXT_PUBLIC_NFT_CONTRACT_ADDRESS="0xdECe7b73E056368F568007c75dbcA26ece919f53"
 NEXT_PUBLIC_WNEW_ADDRESS="0x4438E9C8e0C9B209Fa8B76c83F73A7D317dE3c12"
+NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="NEW17zV1F558ruM22gP5fUqPfzKSddNtBso3Cii"
+NEXT_PUBLIC_OPERATION_FEE=5
 NEXT_PUBLIC_START_BLOCK=4716586
 NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
