env production -> example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="NEW17zV1F558ruM22gP5fUqPfzKSddNtBso3C
 NEXT_PUBLIC_OPERATION_FEE=0
 NEXT_PUBLIC_START_BLOCK=4716586
 NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
+NEXT_PUBLIC_NEWTON_PROJECT_NFT_CONTRACT="0x0"
