--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,9 @@ NEXT_PUBLIC_FIXED_PRICE_SALE_CONTRACT_ADDRESS="0x45d39D5E4C40f078D24ea80E2819ea5
 NEXT_PUBLIC_ENGLISH_AUCTION_CONTRACT_ADDRESS="0x0861aDFc0c90FAbb93287aEa88e7C64525f791A1"
 NEXT_PUBLIC_DUTCH_AUCTION_CONTRACT_ADDRESS="0xcE8eCeBA1D21522Ffa3028270b737e10F25C644E"
 NEXT_PUBLIC_DESIGNATED_SALE_CONTRACT_ADDRESS="0x535F3e39d07AC222c0Af1b742cA749e00B6C6e75"
-NEXT_PUBLIC_NFT_CONTRACT_ADDRESS="0xdECe7b73E056368F568007c75dbcA26ece919f53"
+NEXT_PUBLIC_NFT_CONTRACT_ADDRESS="0x3de1F2bAa58b4CABEa8D93e34272b52b96238194"
 NEXT_PUBLIC_WNEW_ADDRESS="0x4438E9C8e0C9B209Fa8B76c83F73A7D317dE3c12"
-NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="NEW17zV1F558ruM22gP5fUqPfzKSddNtBso3Cii"
+NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="0x0"
 NEXT_PUBLIC_OPERATION_FEE=0
 NEXT_PUBLIC_START_BLOCK=4716586
 NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
