fix bug for config address

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ NEXT_PUBLIC_DUTCH_AUCTION_CONTRACT_ADDRESS="0xcE8eCeBA1D21522Ffa3028270b737e10F2
 NEXT_PUBLIC_DESIGNATED_SALE_CONTRACT_ADDRESS="0x535F3e39d07AC222c0Af1b742cA749e00B6C6e75"
 NEXT_PUBLIC_NFT_CONTRACT_ADDRESS="0x3de1F2bAa58b4CABEa8D93e34272b52b96238194"
 NEXT_PUBLIC_WNEW_ADDRESS="0x4438E9C8e0C9B209Fa8B76c83F73A7D317dE3c12"
-NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="0x0"
+NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="0x0000000000000000000000000000000000000000"
 NEXT_PUBLIC_OPERATION_FEE=0
 NEXT_PUBLIC_START_BLOCK=4716586
 NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
-NEXT_PUBLIC_NEWTON_PROJECT_NFT_CONTRACT="0x0"
+NEXT_PUBLIC_NEWTON_PROJECT_NFT_CONTRACT="0x0000000000000000000000000000000000000000"
