--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_NETWORK_CHAINID=1012
-NEXT_PUBLIC_API_ENDPOINT="https://graph.newtonproject.dev.diynova.com/subgraphs/name/NewtonNFT/ExchangeDev"
+NEXT_PUBLIC_API_ENDPOINT="https://newmall.io/subgraphs/name/NewMall/ExchangeMain"
 NEXT_PUBLIC_NEW_NFT_EXCHANGE_CONTRACT_ADDRESS="0x515F8e37dAf0750F73140FbDab90f1daE7E987C7"
 NEXT_PUBLIC_FIXED_PRICE_SALE_CONTRACT_ADDRESS="0x673aD148672888EF59E1aD71c28B474Ceb1b28E0"
 NEXT_PUBLIC_ENGLISH_AUCTION_CONTRACT_ADDRESS="0xfB60ce3EE1738ddf09A57E1C4Cd40780caa641e3"
@@ -8,7 +8,7 @@ NEXT_PUBLIC_DESIGNATED_SALE_CONTRACT_ADDRESS="0x00000000000000000000000000000000
 NEXT_PUBLIC_WNEW_ADDRESS="0xf4905b9bc02ce21c98eac1803693a9357d5253bf"
 NEXT_PUBLIC_OPERATION_FEE_RECEIPT_ADDRESS="0x0000000000000000000000000000000000000000"
 NEXT_PUBLIC_OPERATION_FEE=0
-NEXT_PUBLIC_START_BLOCK=4716586
+NEXT_PUBLIC_START_BLOCK=24370000
 NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newscan.io
 NEXT_PUBLIC_NEWMALL_COLLECTION_CONTRACT="0xdECe7b73E056368F568007c75dbcA26ece919f53"
-NEXT_PUBLIC_NEWTON_COLLECTION_NFT_CONTRACT="0x5a0F50c36F1BFCFCE52E5a9a0eBC38D7F826B8cE"
+NEXT_PUBLIC_NEWTON_COLLECTION_NFT_CONTRACT="0x46ec96052C5aB4d05698b7b3f3e44bDE76Fe1Ff6"
