--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_NETWORK_CHAINID=1012
-NEXT_PUBLIC_API_ENDPOINT="https://newmall.io/subgraphs/name/NewMall/ExchangeMain"
+NEXT_PUBLIC_API_ENDPOINT="https://graphapi.newmall.io/subgraphs/name/NewMall/ExchangeMain"
 NEXT_PUBLIC_NEW_NFT_EXCHANGE_CONTRACT_ADDRESS="0x515F8e37dAf0750F73140FbDab90f1daE7E987C7"
 NEXT_PUBLIC_FIXED_PRICE_SALE_CONTRACT_ADDRESS="0x673aD148672888EF59E1aD71c28B474Ceb1b28E0"
 NEXT_PUBLIC_ENGLISH_AUCTION_CONTRACT_ADDRESS="0xfB60ce3EE1738ddf09A57E1C4Cd40780caa641e3"
