--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.0",
     "@inlightmedia/react-countdown-timer": "^1.1.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
@@ -47,6 +48,7 @@
     "react-number-format": "^4.7.3",
     "sass": "^1.35.1",
     "stylelint-config-standard": "^22.0.0",
+    "swiper": "^7.0.5",
     "typescript": "^4.3.5",
     "web3modal": "^1.9.4"
   },
