--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "17.0.2",
     "react-device-detect": "^1.17.0",
     "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
     "react-i18next": "^11.7.3",
     "react-number-format": "^4.7.3",
     "sass": "^1.35.1",
