--- a/.env.testnet.example
+++ b/.env.testnet.example
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_NETWORK_CHAINID=1007
-NEXT_PUBLIC_API_ENDPOINT="https://graph.newtonproject.dev.diynova.com/subgraphs/name/NewtonNFT/ExchangeDev"
+NEXT_PUBLIC_API_ENDPOINT="https://graph.devnet.newtonproject.org/subgraphs/name/NewMall/ExchangeMain"
 NEXT_PUBLIC_NEW_NFT_EXCHANGE_CONTRACT_ADDRESS="0x4B082f763844251dfae95eceF0cC4671009d37f7"
 NEXT_PUBLIC_FIXED_PRICE_SALE_CONTRACT_ADDRESS="0x45d39D5E4C40f078D24ea80E2819ea53B574729f"
 NEXT_PUBLIC_ENGLISH_AUCTION_CONTRACT_ADDRESS="0x0861aDFc0c90FAbb93287aEa88e7C64525f791A1"
