--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newscan.io
 NEXT_PUBLIC_NEWMALL_COLLECTION_CONTRACT="0xE1d4DE8c157094Eb39589625A16A1b8ECcaF0467"
 NEXT_PUBLIC_NEWTON_COLLECTION_NFT_CONTRACT="0x46ec96052C5aB4d05698b7b3f3e44bDE76Fe1Ff6"
 NEXT_PUBLIC_GOOGLE_ANALYTICS="G-T82JJHJXRL"
+
+NEXT_PUBLIC_LANDS_CONTRACT="0x863ab07eee6f1849293521e8b50565a4420787b1"
+NEXT_PUBLIC_ESTATE_CONTRACT="0xe0508230dcb5b9a7676d21bd4bef46dcb2a9c96f"
