--- a/.env.testnet.example
+++ b/.env.testnet.example
@@ -13,3 +13,6 @@ NEXT_PUBLIC_NFT_VIEWER_URL=https://nft.newchain-testnet.newscan.io
 NEXT_PUBLIC_NEWMALL_COLLECTION_CONTRACT="0x7cDA17162f4012C69ABfB4968a6FAB402C047fF8"
 NEXT_PUBLIC_NEWTON_COLLECTION_NFT_CONTRACT="0x5a0F50c36F1BFCFCE52E5a9a0eBC38D7F826B8cE"
 NEXT_PUBLIC_GOOGLE_ANALYTICS="G-0ZF10705QZ"
+
+NEXT_PUBLIC_LANDS_CONTRACT="0xdcb37074d804be4f073c1448f2e14b68f9e79d72"
+NEXT_PUBLIC_ESTATE_CONTRACT="0x543853dda005613d36310fbf52c0f194cdb010c9"
