--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS="G-T82JJHJXRL"
 
 NEXT_PUBLIC_LANDS_CONTRACT="0x863ab07eee6f1849293521e8b50565a4420787b1"
 NEXT_PUBLIC_ESTATE_CONTRACT="0xe0508230dcb5b9a7676d21bd4bef46dcb2a9c96f"
+
+NEXT_PUBLIC_CACHE_URL="https://ipfs-cache.devnet.newtonproject.org/"
