--- a/.env.testnet.example
+++ b/.env.testnet.example
@@ -16,3 +16,5 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS="G-0ZF10705QZ"
 
 NEXT_PUBLIC_LANDS_CONTRACT="0xdcb37074d804be4f073c1448f2e14b68f9e79d72"
 NEXT_PUBLIC_ESTATE_CONTRACT="0x543853dda005613d36310fbf52c0f194cdb010c9"
+
+NEXT_PUBLIC_CACHE_URL="https://ipfs-cache.devnet.newtonproject.org/"
