--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_NETWORK_CHAINID=1002
-NEXT_PUBLIC_API_ENDPOINT="https://graphapi.newmall.io/subgraphs/name/NewMall/ExchangeMain"
+NEXT_PUBLIC_API_ENDPOINT="https://graph-devnet.devnet.newtonproject.org/subgraphs/name/NewMall/ExchangeMain"
 NEXT_PUBLIC_NEW_NFT_EXCHANGE_CONTRACT_ADDRESS="0xeE942d81609157E8386CD054ABa828e142f5b927"
 NEXT_PUBLIC_FIXED_PRICE_SALE_CONTRACT_ADDRESS="0x67f021C5730B065f576A36d1A5173e7AB40b9aCF"
 NEXT_PUBLIC_ENGLISH_AUCTION_CONTRACT_ADDRESS="0x8115D63519FdB395645D7EBF7331c861921b2222"
@@ -17,4 +17,4 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS="G-T82JJHJXRL"
 NEXT_PUBLIC_LANDS_CONTRACT="0x863ab07eee6f1849293521e8b50565a4420787b1"
 NEXT_PUBLIC_ESTATE_CONTRACT="0xe0508230dcb5b9a7676d21bd4bef46dcb2a9c96f"
 
-NEXT_PUBLIC_CACHE_URL="https://ipfs.wavemall.io/"
+NEXT_PUBLIC_CACHE_URL="https://ipfs.wavemall.io/ipfs/"
